--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,7 @@ twitter_username: jekyllrb
 github_username:  alexandrebk
 
 # Build settings
-# markdown: kramdown
-markdown: redcarpet
+markdown: kramdown
 highlighter: rouge
 theme: minima
 plugins:
