--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -12,6 +12,4 @@
   link:    "https://artoche-staging.herokuapp.com"
   content: "Création d'un espace client pour gérer ses devis, facturations et chantiers"
   techno:  "Ruby on Rails"
-  img:     "/images/wesh.gif"
-  
-
+  img:     "/images/artoche.png"
