--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,20 +1,20 @@
-- title:      "The Poplace"
-  link:       "https://thepoplace.com/"
-  content:    "Création d'une application privée pour la boutique Shopify The Poplace visant à automatiser les commandes vers son fournisseur et ainsi gagner du temps de traitement sur les opérations"
-  techno:     "Ruby on Rails"
-  image_path: "/images/the-poplace.png"
+- title:      "Les Ateliers NX"
+  link:       "https://www.lesateliersnx.fr/"
+  content:    "Création de landing pages, d'un parcours prospect, d'un espace client, d'un espace manager, et d'un espace administrateur avec gestion des projets et devis et facturation"
+  techno:     "Ruby on Rails, Vanilla JS"
+  image_path: "/images/ateliers-nx.png"
 - title:      "Monsieur Peinture"
   link:       "https://devis.monsieurpeinture.com/projects/new"
   content:    "Création d'un espace client avec outil d'orientation, devis, facturation, chat et d'un espace partenaire avec allocation des projets, agenda et suivi des projets"
   techno:     "Ruby on Rails, Stimulus.js"
   image_path: "/images/mr-peinture.png"
-- title:      "Les Ateliers NX"
-  link:       "https://www.lesateliersnx.fr/"
-  content:    "Création de landing pages, d'un parcours prospect, d'un espace client, d'un espace administrateur avec gestion des projets et devis et facturation"
-  techno:     "Ruby on Rails, Vanilla JS"
-  image_path: "/images/ateliers-nx.png"
-- title:      "Artoche"
-  link:       "https://artoche-production.herokuapp.com"
-  content:    "Création d'un espace client pour gérer ses devis, facturations et chantiers"
-  techno:     "Ruby on Rails, Vanilla JS"
-  image_path: "/images/artoche.png"
+- title:      "Mon CDI"
+  link:       "https://www.mon-cdi.fr"
+  content:    "Maintenance du site, création de landing pages et amélioration du parcours utilisateur"
+  techno:     "Ruby on Rails, Stimulus.js"
+  image_path: "/images/mon-cdi.png"
+- title:      "The Poplace"
+  link:       "https://thepoplace.com/"
+  content:    "Création d'une application privée pour la boutique Shopify The Poplace visant à automatiser les commandes vers son fournisseur et ainsi gagner du temps de traitement sur les opérations"
+  techno:     "Ruby on Rails"
+  image_path: "/images/the-poplace.png"
