Replace The Poplace by Nysa in Portfolio

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -13,8 +13,8 @@
   content:    "Maintenance du site, création de landing pages et amélioration du parcours utilisateur"
   techno:     "Ruby on Rails, Stimulus.js"
   image_path: "/images/mon-cdi.png"
-- title:      "The Poplace"
-  link:       "https://thepoplace.com/"
-  content:    "Création d'une application privée pour la boutique Shopify The Poplace visant à automatiser les commandes vers son fournisseur et ainsi gagner du temps de traitement sur les opérations"
+- title:      "Nysa"
+  link:       "https://www.nysa.fr/"
+  content:    "Création d'un  connecteur entre la boutique Shopify et l'ERP de Nysa"
   techno:     "Ruby on Rails"
-  image_path: "/images/the-poplace.png"
+  image_path: "/images/nysa.png"
