Add Resources in Navbar

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -1,20 +1,51 @@
 - title:      "Blog DHH"
   link:       "https://world.hey.com/dhh"
-  content:    "Création d'un espace client avec outil d'orientation, devis, facturation, chat et d'un espace partenaire avec allocation des projets, agenda et suivi des projets"
-  techno:     "Ruby on Rails, Stimulus.js"
-  image_path: "/images/mr-peinture.png"
+  content:    "Blog du fondateur de Ruby on Rails et CTO de Basecamp. On y parle "
+  techno:     "Ruby on Rails"
 - title:      "Blog Guillaume Briday"
   link:       "https://guillaumebriday.fr/"
-  content:    "Création de landing pages, d'un parcours prospect, d'un espace client, d'un espace manager, et d'un espace administrateur avec gestion des projets et devis et facturation"
-  techno:     "Ruby on Rails, Vanilla JS"
-  image_path: "/images/ateliers-nx.png"
+  content:    "Plusieurs articles et vidéos très intéressants"
+  techno:     "Ruby on Rails"
+- title:      "Blog Je Suis Un Dev"
+  link:       "https://www.jesuisundev.com/"
+  content:    "Blog généraliste sur le développement"
+  techno:     ""
+- title:      "Css Tricks"
+  link:       "https://css-tricks.com/"
+  content:    "Pédagogiquement le meilleur site sur du css"
+  techno:     "css"
+- title:      "Mozilla Developer Network (MDN)"
+  link:       "https://developer.mozilla.org/"
+  content:    "Meilleur site de documentation pour du front"
+  techno:     "css, html, Javascript"
 - title:      "Article sur les blocks"
   link:       "https://www.codewithjason.com/ampersand-ruby-block/"
   content:    "Qu'est qu'un block"
-  techno:     "Ruby on Rails, Stimulus.js"
-  image_path: "/images/mon-cdi.png"
-- title:      "Nysa"
-  link:       "https://www.nysa.fr/"
-  content:    "Création d'un  connecteur entre la boutique Shopify et l'ERP de Nysa"
+  techno:     "Ruby"
+- title:      "CollectionProxy#build"
+  link:       "https://apidock.com/rails/ActiveRecord/Associations/CollectionProxy/build"
+  content:    "Build a collection of objects related to another object"
+  techno:     "ActiveRecord"
+- title:      "Pattern Matching"
+  link:       "https://blog.appsignal.com/2021/07/28/introduction-to-pattern-matching-in-ruby.html"
+  content:    "An Introduction to Pattern Matching in Ruby"
+  techno:     "ruby"
+- title:      "Blog Upcase by Thoughbot"
+  link:       "https://thoughtbot.com/upcase/"
+  content:    "Un des meilleurs blogs sur Ruby on Rails. Beaucoup de vidéos disponibles sur des sujets variés. Idéal pour progresser"
   techno:     "Ruby on Rails"
-  image_path: "/images/nysa.png"
+- title:      "Blog Go Rails par Chris Oliver"
+  link:       "https://gorails.com/"
+  content:    "Un très bon blog sur Ruby on Rails."
+  techno:     "Ruby on Rails"
+- title:      "Query n+1"
+  link:       "https://blog.appsignal.com/2020/01/22/rails-is-fast-optimize-your-view-performance.html"
+  content:    "Comment résoudre les problèmes de queries qui ralentissent votre application"
+  techno:     "PostGreSQL Ruby on Rails"
+- title:      "Les Services dans Rails"
+  link:       "https://blog.appsignal.com/2020/06/17/using-service-objects-in-ruby-on-rails.html"
+  content:    "Comment utiliser des services dans Rails"
+  techno:     "Ruby on Rails"
+
+
+
