Updates Resources Pages

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -1,10 +1,10 @@
-- title:      "Blog DHH"
+- title:      "Blog David HEINEMEIER HANSSON"
   link:       "https://world.hey.com/dhh"
-  content:    "Blog du fondateur de Ruby on Rails et CTO de Basecamp. On y parle "
+  content:    "Blog du fondateur de Ruby on Rails, Basecamp et Hey"
   techno:     "Ruby on Rails"
 - title:      "Blog Guillaume Briday"
   link:       "https://guillaumebriday.fr/"
-  content:    "Plusieurs articles et vidéos très intéressants"
+  content:    "Dév lyonnais avec plusieurs articles et vidéos très intéressants"
   techno:     "Ruby on Rails"
 - title:      "Blog Je Suis Un Dev"
   link:       "https://www.jesuisundev.com/"
