--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -1,51 +1,36 @@
 - title:      "Blog David HEINEMEIER HANSSON"
   link:       "https://world.hey.com/dhh"
-  content:    "Blog du fondateur de Ruby on Rails, Basecamp et Hey"
-  techno:     "Ruby on Rails"
+  content:    "Blog du fondateur de Ruby on Rails, Basecamp et Hey."
 - title:      "Blog Guillaume Briday"
   link:       "https://guillaumebriday.fr/"
-  content:    "Dév lyonnais avec plusieurs articles et vidéos très intéressants"
-  techno:     "Ruby on Rails"
+  content:    "Dév lyonnais avec plusieurs articles et vidéos très intéressants sur Ruby on Rails et Javascript."
 - title:      "Blog Je Suis Un Dev"
   link:       "https://www.jesuisundev.com/"
   content:    "Blog généraliste sur le développement"
-  techno:     ""
 - title:      "Css Tricks"
   link:       "https://css-tricks.com/"
   content:    "Pédagogiquement le meilleur site sur du css"
-  techno:     "css"
 - title:      "Mozilla Developer Network (MDN)"
   link:       "https://developer.mozilla.org/"
-  content:    "Meilleur site de documentation pour du front"
-  techno:     "css, html, Javascript"
+  content:    "Meilleur site de documentation pour du front (Css, Html et Javascript)"
 - title:      "Article sur les blocks"
   link:       "https://www.codewithjason.com/ampersand-ruby-block/"
-  content:    "Qu'est qu'un block"
-  techno:     "Ruby"
+  content:    "Dans cet article vous en apprendrez plus sur le fonctionnement des blocks en Ruby."
 - title:      "CollectionProxy#build"
   link:       "https://apidock.com/rails/ActiveRecord/Associations/CollectionProxy/build"
-  content:    "Build a collection of objects related to another object"
-  techno:     "ActiveRecord"
+  content:    "Build a collection of objects related to another object with ruby"
 - title:      "Pattern Matching"
   link:       "https://blog.appsignal.com/2021/07/28/introduction-to-pattern-matching-in-ruby.html"
-  content:    "An Introduction to Pattern Matching in Ruby"
-  techno:     "ruby"
+  content:    "An Introduction to Pattern Matching in ruby"
 - title:      "Blog Upcase by Thoughbot"
   link:       "https://thoughtbot.com/upcase/"
-  content:    "Un des meilleurs blogs sur Ruby on Rails. Beaucoup de vidéos disponibles sur des sujets variés. Idéal pour progresser"
-  techno:     "Ruby on Rails"
+  content:    "Un des meilleurs blogs sur Ruby on Rails. Beaucoup de vidéos disponibles sur des sujets variés. Idéal pour progresser."
 - title:      "Blog Go Rails par Chris Oliver"
   link:       "https://gorails.com/"
-  content:    "Un très bon blog sur Ruby on Rails."
-  techno:     "Ruby on Rails"
+  content:    "Un très bon blog sur Ruby on Rails avec des cours."
 - title:      "Query n+1"
   link:       "https://blog.appsignal.com/2020/01/22/rails-is-fast-optimize-your-view-performance.html"
-  content:    "Comment résoudre les problèmes de queries qui ralentissent votre application"
-  techno:     "PostGreSQL Ruby on Rails"
+  content:    "Dans cet article vous apprendrez comment reprendre les queries qui ralentissent votre application."
 - title:      "Les Services dans Rails"
   link:       "https://blog.appsignal.com/2020/06/17/using-service-objects-in-ruby-on-rails.html"
-  content:    "Comment utiliser des services dans Rails"
-  techno:     "Ruby on Rails"
-
-
-
+  content:    "Dans cet article vous apprendre comment utiliser des services dans Rails."
