--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -1,10 +1,10 @@
-- title:      "Blog David HEINEMEIER HANSSON"
+- title:      "Blog de David HEINEMEIER HANSSON"
   link:       "https://world.hey.com/dhh"
   content:    "Blog du fondateur de Ruby on Rails, Basecamp et Hey."
-- title:      "Blog Guillaume Briday"
+- title:      "Blog de Guillaume Briday"
   link:       "https://guillaumebriday.fr/"
   content:    "Dév lyonnais avec plusieurs articles et vidéos très intéressants sur Ruby on Rails et Javascript."
-- title:      "Blog Je Suis Un Dev"
+- title:      "Je Suis Un Dev"
   link:       "https://www.jesuisundev.com/"
   content:    "Blog généraliste sur le développement"
 - title:      "Css Tricks"
@@ -25,9 +25,9 @@
 - title:      "Blog Upcase by Thoughbot"
   link:       "https://thoughtbot.com/upcase/"
   content:    "Un des meilleurs blogs sur Ruby on Rails. Beaucoup de vidéos disponibles sur des sujets variés. Idéal pour progresser."
-- title:      "Blog Go Rails par Chris Oliver"
+- title:      "Go Rails"
   link:       "https://gorails.com/"
-  content:    "Un très bon blog sur Ruby on Rails avec des cours."
+  content:    "Un très bon blog sur Ruby on Rails  par Chris Oliver"
 - title:      "Query n+1"
   link:       "https://blog.appsignal.com/2020/01/22/rails-is-fast-optimize-your-view-performance.html"
   content:    "Dans cet article vous apprendrez comment reprendre les queries qui ralentissent votre application."
