Add 2 blog (Uber and GetAround in Resources

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -4,6 +4,12 @@
 - title:      "Blog de Guillaume Briday"
   link:       "https://guillaumebriday.fr/"
   content:    "Dév lyonnais avec plusieurs articles et vidéos très intéressants sur Ruby on Rails et Javascript."
+- title:      "Blog de GetAround (ex Drivy)"
+  link:       "https://getaround.tech/"
+  content:    "Un blog sur des ingénieurs de GetAround avec beaucoup d'articles sur Ruby on Rails."
+- title:      "Blog des ingénieurs d'Uber"
+  link:       "https://eng.uber.com/"
+  content:    "Blog avec plusieurs articles intéressants sur les micro-services"
 - title:      "Je Suis Un Dev"
   link:       "https://www.jesuisundev.com/"
   content:    "Blog généraliste sur le développement"
