Adds Resources articles

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -2,7 +2,7 @@
   link:       "https://world.hey.com/dhh"
   content:    "Blog du fondateur de Ruby on Rails, Basecamp et Hey."
 - title:      "Blog de Guillaume Briday"
-  link:       "https://guillaumebriday.fr/"
+  link:       "https://guillaumebriday.fr/articles"
   content:    "Dév lyonnais avec plusieurs articles et vidéos très intéressants sur Ruby on Rails et Javascript."
 - title:      "Blog de GetAround (ex Drivy)"
   link:       "https://getaround.tech/"
@@ -10,10 +10,16 @@
 - title:      "Blog des ingénieurs d'Uber"
   link:       "https://eng.uber.com/"
   content:    "Blog avec plusieurs articles intéressants sur les micro-services"
+- title:      "Blog Go Rails par Chris Oliver"
+  link:       "https://gorails.com/"
+  content:    "Un très bon blog sur Ruby on Rails  par Chris Oliver"
+- title:      "Blog Upcase by Thoughbot"
+  link:       "https://thoughtbot.com/upcase/"
+  content:    "Un des meilleurs blogs sur Ruby on Rails. Beaucoup de vidéos disponibles sur des sujets variés. Idéal pour progresser. (Attention ce blog n'est plus mis à jour)"
 - title:      "Je Suis Un Dev"
   link:       "https://www.jesuisundev.com/"
   content:    "Blog généraliste sur le développement"
-- title:      "Css Tricks"
+- title:      "Blog Css Tricks"
   link:       "https://css-tricks.com/"
   content:    "Pédagogiquement le meilleur site sur du css"
 - title:      "Mozilla Developer Network (MDN)"
@@ -28,15 +34,15 @@
 - title:      "Pattern Matching"
   link:       "https://blog.appsignal.com/2021/07/28/introduction-to-pattern-matching-in-ruby.html"
   content:    "An Introduction to Pattern Matching in ruby"
-- title:      "Blog Upcase by Thoughbot"
-  link:       "https://thoughtbot.com/upcase/"
-  content:    "Un des meilleurs blogs sur Ruby on Rails. Beaucoup de vidéos disponibles sur des sujets variés. Idéal pour progresser."
-- title:      "Go Rails"
-  link:       "https://gorails.com/"
-  content:    "Un très bon blog sur Ruby on Rails  par Chris Oliver"
 - title:      "Query n+1"
   link:       "https://blog.appsignal.com/2020/01/22/rails-is-fast-optimize-your-view-performance.html"
   content:    "Dans cet article vous apprendrez comment reprendre les queries qui ralentissent votre application."
 - title:      "Les Services dans Rails"
   link:       "https://blog.appsignal.com/2020/06/17/using-service-objects-in-ruby-on-rails.html"
-  content:    "Dans cet article vous apprendre comment utiliser des services dans Rails."
+  content:    "Dans cet article vous apprendrez comment utiliser des services dans Rails."
+- title:      "13 tips pour mieux coder par Guillaume Briday"
+  link:       "https://guillaumebriday.fr/13-tips-to-write-better-rails-code"
+  content:    "Des tips très utiles quand on débute dans Rails"
+- title:      "Tips pour des développeurs juniors"
+  link:       "https://getaround.tech/ruby-tricks-for-junior-devs/"
+  content:    "D'autres tips pour des développeurs Junior sur Ruby et Rails"
