--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -1,6 +1,6 @@
-- title:      "Blog de David HEINEMEIER HANSSON"
-  link:       "https://world.hey.com/dhh"
-  content:    "Blog du fondateur de Ruby on Rails, Basecamp et Hey."
+- title:      "Blog de Synbioz"
+  link:       "https://www.synbioz.com/blog/tech"
+  content:    "Agence Web faisant principalement du Ruby"
 - title:      "Blog de Guillaume Briday"
   link:       "https://guillaumebriday.fr/articles"
   content:    "Dév lyonnais avec plusieurs articles et vidéos très intéressants sur Ruby on Rails et Javascript."
