feat: Add resources

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -25,3 +25,9 @@
 - title:      "Mozilla Developer Network (MDN)"
   link:       "https://developer.mozilla.org/"
   content:    "Meilleur site de documentation pour du front (Css, Html et Javascript)"
+- title:      "Guide de Ruby on Rails"
+  link:       "https://guides.rubyonrails.org/"
+  content:    "Un guide pour les utilisateurs de Ruby on Rails. À lire et relire"
+- title:      "Newsletter hebdomadaire de Ruby"
+  link:       "https://rubyweekly.com/"
+  content:    "Un email envoyé quotidiennement avec les meilleurs articles de la communauté Ruby"
