--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -1,33 +1,51 @@
-- title:      "Blog de Synbioz"
-  link:       "https://www.synbioz.com/blog/tech"
-  content:    "Agence Web faisant principalement du Ruby"
-- title:      "Blog de Guillaume Briday"
-  link:       "https://guillaumebriday.fr/articles"
-  content:    "Dév lyonnais avec plusieurs articles et vidéos très intéressants sur Ruby on Rails et Javascript."
-- title:      "Blog de GetAround (ex Drivy)"
-  link:       "https://getaround.tech/"
-  content:    "Un blog sur des ingénieurs de GetAround avec beaucoup d'articles sur Ruby on Rails."
-- title:      "Blog des ingénieurs d'Uber"
-  link:       "https://eng.uber.com/"
-  content:    "Blog avec plusieurs articles intéressants sur les micro-services"
-- title:      "Blog Go Rails par Chris Oliver"
-  link:       "https://gorails.com/"
-  content:    "Un très bon blog sur Ruby on Rails  par Chris Oliver"
-- title:      "Blog Upcase by Thoughbot"
-  link:       "https://thoughtbot.com/upcase/"
-  content:    "Un des meilleurs blogs sur Ruby on Rails. Beaucoup de vidéos disponibles sur des sujets variés. Idéal pour progresser. (Attention ce blog n'est plus mis à jour)"
-- title:      "Je Suis Un Dev"
-  link:       "https://www.jesuisundev.com/"
-  content:    "Blog généraliste sur le développement"
-- title:      "Blog Css Tricks"
-  link:       "https://css-tricks.com/"
-  content:    "Pédagogiquement le meilleur site sur du css"
-- title:      "Mozilla Developer Network (MDN)"
-  link:       "https://developer.mozilla.org/"
-  content:    "Meilleur site de documentation pour du front (Css, Html et Javascript)"
-- title:      "Guide de Ruby on Rails"
-  link:       "https://guides.rubyonrails.org/"
-  content:    "Un guide pour les utilisateurs de Ruby on Rails. À lire et relire"
 - title:      "Newsletter hebdomadaire de Ruby"
   link:       "https://rubyweekly.com/"
   content:    "Un email envoyé quotidiennement avec les meilleurs articles de la communauté Ruby"
+- title:      "Blog de Synbioz"
+  link:       "https://www.synbioz.com/blog/tech"
+  content:    "Plusieurs articles pour débutant et confirmé sur du Ruby et du Rails"
+- title:      "13 tips pour mieux coder par Guillaume Briday"
+  link:       "https://guillaumebriday.fr/13-tips-to-write-better-rails-code"
+  content:    "Des tips très utiles quand on débute dans Rails."
+- title:      "Tips pour des développeurs juniors"
+  link:       "https://getaround.tech/ruby-tricks-for-junior-devs/"
+  content:    "D'autres tips pour des développeurs Junior sur Ruby et Rails"
+- title:      "Blog de GetAround (ex Drivy)"
+  link:       "https://getaround.tech/"
+  content:    "Un blog sur des ingénieurs de GetAround avec beaucoup d'articles sur Ruby on Rails."
+- title:      "Blog Go Rails par Chris Oliver"
+  link:       "https://gorails.com/"
+  content:    "Un très bon blog sur Ruby on Rails  par Chris Oliver"
+- title:      "Upcase by Thoughbot"
+  link:       "https://thoughtbot.com/upcase/"
+  content:    "Un des meilleurs blogs sur Ruby on Rails. Plusieurs ressources comme des vidéos, des articles et des flashcards."
+- title:      "Je Suis Un Dev"
+  link:       "https://www.jesuisundev.com/"
+  content:    "Blog généraliste sur le développement"
+- title:      "Documentation MDN pour du front"
+  link:       "https://developer.mozilla.org/"
+  content:    "Cette documentation front-end par les créateurs du navigateur Mozilla Firefox est une des meilleures disponibles en lignes"
+- title:      "Blog des ingénieurs d'Uber"
+  link:       "https://eng.uber.com/"
+  content:    "Blog avec plusieurs articles intéressants sur les micro-services"
+- title:      "Article sur les blocks"
+  link:       "https://www.codewithjason.com/ampersand-ruby-block/"
+  content:    "Dans cet article vous en apprendrez plus sur le fonctionnement des blocks en Ruby."
+- title:      "CollectionProxy#build"
+  link:       "https://apidock.com/rails/ActiveRecord/Associations/CollectionProxy/build"
+  content:    "Build a collection of objects related to another object with ruby"
+- title:      "Pattern Matching"
+  link:       "https://blog.appsignal.com/2021/07/28/introduction-to-pattern-matching-in-ruby.html"
+  content:    "An Introduction to Pattern Matching in ruby"
+- title:      "Query n+1"
+  link:       "https://blog.appsignal.com/2020/01/22/rails-is-fast-optimize-your-view-performance.html"
+  content:    "Dans cet article vous apprendrez comment reprendre les queries qui ralentissent votre application."
+- title:      "Les Services dans Rails"
+  link:       "https://blog.appsignal.com/2020/06/17/using-service-objects-in-ruby-on-rails.html"
+  content:    "Dans cet article vous apprendrez comment utiliser des services dans Rails."
+- title:      "Chargement automatique des modules et classes en Ruby"
+  link:       "https://www.synbioz.com/blog/tech/chargement-automatique-des-modules-et-classes-en-ruby"
+  content:    "Présentation de Zeitwerk et du loading de fichiers"
+- title:      "Meta Class et self dans Ruby"
+  link:       "https://www.openmymind.net/2010/6/25/Learning-Ruby-class-self/"
+  content:    "Meta Class et self dans Ruby"
