--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -21,38 +21,38 @@
   content: "Un des meilleurs blogs sur Ruby on Rails. Plusieurs ressources comme des vidéos, des articles et des flashcards."
 - title:   "Je Suis Un Dev"
   link:    "https://www.jesuisundev.com/"
-  content: "Blog généraliste sur le développement"
+  content: "Blog généraliste sur le développement web"
 - title:   "Documentation MDN pour du front"
   link:    "https://developer.mozilla.org/"
-  content: "Cette documentation front-end par les créateurs du navigateur Mozilla Firefox est une des meilleures disponibles en lignes"
+  content: "Doc front-end par les créateurs du navigateur Mozilla Firefox. C'est une des meilleures"
 - title:   "Blog des ingénieurs d'Uber"
   link:    "https://eng.uber.com/"
   content: "Blog avec plusieurs articles intéressants sur les micro-services"
-- title:   "Article sur les blocks"
+- title:   "Qu'est qu'un block en Ruby ?"
   link:    "https://www.codewithjason.com/ampersand-ruby-block/"
   content: "Dans cet article vous en apprendrez plus sur le fonctionnement des blocks en Ruby."
 - title:   "CollectionProxy#build"
   link:    "https://apidock.com/rails/ActiveRecord/Associations/CollectionProxy/build"
   content: "Build a collection of objects related to another object with ruby"
-- title:   "Pattern Matching"
+- title:   "Qu'est ce que le Pattern Matching ?"
   link:    "https://blog.appsignal.com/2021/07/28/introduction-to-pattern-matching-in-ruby.html"
-  content: "An Introduction to Pattern Matching in ruby"
-- title:   "Query n+1"
+  content: "Une introduction au Pattern Matching avec Ruby"
+- title:   "C'est quoi une Query n+1 ?"
   link:    "https://blog.appsignal.com/2020/01/22/rails-is-fast-optimize-your-view-performance.html"
   content: "Dans cet article vous apprendrez comment reprendre les queries qui ralentissent votre application."
-- title:   "Les Services dans Rails"
+- title:   "Comment faire des Services dans Rails"
   link:    "https://blog.appsignal.com/2020/06/17/using-service-objects-in-ruby-on-rails.html"
   content: "Dans cet article vous apprendrez comment utiliser des services dans Rails."
-- title:   "Chargement automatique des modules et classes en Ruby"
+- title:   "Comment marche le chargement automatique des modules et classes en Ruby"
   link:    "https://www.synbioz.com/blog/tech/chargement-automatique-des-modules-et-classes-en-ruby"
   content: "Présentation de Zeitwerk et du loading de fichiers"
 - title:   "Meta Class et self dans Ruby"
   link:    "https://www.openmymind.net/2010/6/25/Learning-Ruby-class-self/"
   content: "Meta Class et self dans Ruby"
-- title:   "Article sur l'optimisation d'Active Record"
+- title:   "Comment optimiser sa base de données sour Rails"
   link:    "https://blog.appsignal.com/2022/01/26/test-and-optimize-your-ruby-on-rails-database-performance.html"
-  content: "Optimiser sa base de données sur Ruby on Rails"
-- title:   "An Introduction to the ViewComponent Gem"
+  content: "Un article sur les performances de votre application"
+- title:   "Une introduction à la gem ViewComponent"
   link:    "https://www.honeybadger.io/blog/ruby-view-components/"
   content: "Une super alternative aux 'render' créé par GitHub"
 - title:   "Changing a polymorphic_type in Rails"
