Adds resources article for meta data

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -10,6 +10,9 @@
 - title:   "Tips pour des développeurs juniors"
   link:    "https://getaround.tech/ruby-tricks-for-junior-devs/"
   content: "D'autres tips pour des développeurs Junior sur Ruby et Rails"
+- title:   "Setup des meta data dans Rails"
+  link:    "https://www.lewagon.com/blog/setup-meta-tags-rails"
+  content: "Comment paramétrer des meta data personalisées pour chaque page de votre application"
 - title:   "Blog de GetAround (ex Drivy)"
   link:    "https://getaround.tech/"
   content: "Un blog sur des ingénieurs de GetAround avec beaucoup d'articles sur Ruby on Rails."
