--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -73,3 +73,9 @@
 - title:   "Tableaux numériques"
   link:    "https://excalidraw.com/"
   content: "Interface de dessin en ligne"
+- title:   "Vue avec Rails"
+  link:    "https://www.bootrails.com/blog/ruby-on-rails-and-vuejs-tutorial-a-how-to-guide/"
+  content: "Setup de Vue.js avec Rails"
+- title:   "The Turbo Rails Tutorial"
+  link:   "https://www.hotrails.dev/"
+  content: "Tuto sur Turbo"
