Updates resource list

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -67,15 +67,18 @@
 - title:   "Éviter les race conditions dans Rails"
   link:    "https://www.honeybadger.io/blog/avoid-race-condition-in-rails/"
   content: "Protéger votre accès à la base de données"
+- title:   "Vue avec Rails"
+  link:    "https://www.bootrails.com/blog/ruby-on-rails-and-vuejs-tutorial-a-how-to-guide/"
+  content: "Setup de Vue.js avec Rails"
+- title:   "The Turbo Rails Tutorial"
+  link:    "https://www.hotrails.dev/"
+  content: "Tuto sur Turbo"
 - title:   "Liste de sites utiles"
   link:    "https://medium.com/@Cesscode/list-of-useful-websites-every-web-developer-should-know-about-c8561b862e5f"
   content: "Une liste de sites utiles pour faire du css ou du design"
 - title:   "Tableaux numériques"
   link:    "https://excalidraw.com/"
   content: "Interface de dessin en ligne"
-- title:   "Vue avec Rails"
-  link:    "https://www.bootrails.com/blog/ruby-on-rails-and-vuejs-tutorial-a-how-to-guide/"
-  content: "Setup de Vue.js avec Rails"
-- title:   "The Turbo Rails Tutorial"
-  link:   "https://www.hotrails.dev/"
-  content: "Tuto sur Turbo"
+- title:   "France Transfert Téléversement"
+  link:    "https://www.hotrails.dev/"
+  content: "Transfert de fichier volumineux"
