--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -34,6 +34,9 @@
 - title:   "Qu'est qu'un block en Ruby ?"
   link:    "https://www.codewithjason.com/ampersand-ruby-block/"
   content: "Dans cet article vous en apprendrez plus sur le fonctionnement des blocks en Ruby."
+- title:   "Blog Saeloun Ruby and Rails et React"
+  link:    "https://blog.saeloun.com/"
+  content: "Blog Saeloun Ruby and Rails et React"
 - title:   "CollectionProxy#build"
   link:    "https://apidock.com/rails/ActiveRecord/Associations/CollectionProxy/build"
   content: "Build a collection of objects related to another object with ruby"
