--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -4,72 +4,34 @@
 - title:   "Blog de Synbioz"
   link:    "https://www.synbioz.com/blog/tech"
   content: "Plusieurs articles pour débutant et confirmé sur du Ruby et du Rails"
-- title:   "13 tips pour mieux coder par Guillaume Briday"
-  link:    "https://guillaumebriday.fr/13-tips-to-write-better-rails-code"
-  content: "Des tips très utiles quand on débute dans Rails."
-- title:   "Tips pour des développeurs juniors"
-  link:    "https://getaround.tech/ruby-tricks-for-junior-devs/"
-  content: "D'autres tips pour des développeurs Junior sur Ruby et Rails"
-- title:   "Setup des meta data dans Rails"
-  link:    "https://www.lewagon.com/blog/setup-meta-tags-rails"
-  content: "Comment paramétrer des meta data personalisées pour chaque page de votre application"
 - title:   "Blog de GetAround (ex Drivy)"
   link:    "https://getaround.tech/"
   content: "Un blog sur des ingénieurs de GetAround avec beaucoup d'articles sur Ruby on Rails."
 - title:   "Blog Go Rails par Chris Oliver"
   link:    "https://gorails.com/"
   content: "Un très bon blog sur Ruby on Rails  par Chris Oliver"
-- title:   "Upcase by Thoughbot"
+- title:   "Blog Upcase par Thoughbot"
   link:    "https://thoughtbot.com/upcase/"
   content: "Un des meilleurs blogs sur Ruby on Rails. Plusieurs ressources comme des vidéos, des articles et des flashcards."
-- title:   "Je Suis Un Dev"
-  link:    "https://www.jesuisundev.com/"
-  content: "Blog généraliste sur le développement web"
-- title:   "Documentation MDN pour du front"
-  link:    "https://developer.mozilla.org/"
-  content: "Doc front-end par les créateurs du navigateur Mozilla Firefox. C'est une des meilleures"
 - title:   "Blog des ingénieurs d'Uber"
   link:    "https://eng.uber.com/"
-  content: "Blog avec plusieurs articles intéressants sur les micro-services"
-- title:   "Qu'est qu'un block en Ruby ?"
-  link:    "https://www.codewithjason.com/ampersand-ruby-block/"
-  content: "Dans cet article vous en apprendrez plus sur le fonctionnement des blocks en Ruby."
+  content: "Blog avec plusieurs articles intéressants orientée micro-services"
+- title:   "Blog dev.to"
+  link:    "https://dev.to/"
+  content: "A constructive and inclusive social network for software developers. With you every step of your journey."
 - title:   "Blog Saeloun Ruby and Rails et React"
   link:    "https://blog.saeloun.com/"
   content: "Blog Saeloun Ruby and Rails et React"
-- title:   "CollectionProxy#build"
-  link:    "https://apidock.com/rails/ActiveRecord/Associations/CollectionProxy/build"
-  content: "Build a collection of objects related to another object with ruby"
-- title:   "Qu'est ce que le Pattern Matching ?"
-  link:    "https://blog.appsignal.com/2021/07/28/introduction-to-pattern-matching-in-ruby.html"
-  content: "Une introduction au Pattern Matching avec Ruby"
-- title:   "Comment faire des Services dans Rails"
-  link:    "https://blog.appsignal.com/2020/06/17/using-service-objects-in-ruby-on-rails.html"
-  content: "Dans cet article vous apprendrez comment utiliser des services dans Rails."
-- title:   "Comment marche le chargement automatique des modules et classes en Ruby"
-  link:    "https://www.synbioz.com/blog/tech/chargement-automatique-des-modules-et-classes-en-ruby"
-  content: "Présentation de Zeitwerk et du loading de fichiers"
-- title:   "Meta Class et self dans Ruby"
-  link:    "https://www.openmymind.net/2010/6/25/Learning-Ruby-class-self/"
-  content: "Meta Class et self dans Ruby"
-- title:   "Une introduction à la gem ViewComponent"
-  link:    "https://www.honeybadger.io/blog/ruby-view-components/"
-  content: "Une super alternative aux 'render' créé par GitHub"
-- title:   "Compte Twitter WebSebDev"
+- title:   "Twitter de WebSebDev"
   link:    "https://twitter.com/websebdev"
   content: "Un tricks par semaine sur Rails par un développeur de chez Podia"
-- title:   "Vue avec Rails"
-  link:    "https://www.bootrails.com/blog/ruby-on-rails-and-vuejs-tutorial-a-how-to-guide/"
-  content: "Setup de Vue.js avec Rails"
-- title:   "The Turbo Rails Tutorial"
-  link:    "https://www.hotrails.dev/"
-  content: "Tuto sur Turbo"
-- title:   "Liste de sites utiles"
-  link:    "https://medium.com/@Cesscode/list-of-useful-websites-every-web-developer-should-know-about-c8561b862e5f"
-  content: "Une liste de sites utiles pour faire du css ou du design"
 - title:   "Tableaux numériques"
   link:    "https://excalidraw.com/"
   content: "Interface de dessin en ligne"
 - title:   "France Transfert Téléversement"
-  link:    "https://www.hotrails.dev/"
+  link:    "https://francetransfert.numerique.gouv.fr/upload"
   content: "Transfert de fichier volumineux"
+- title:   "Page Speed"
+  link:    "https://pagespeed.web.dev/report?url=https%3A%2F%2Fwww.mon-cdi.fr%2F"
+  content: "Un outil pour mesurer les performances de son site"
+
