--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -40,3 +40,6 @@
 - title:   "SOLID Principle"
   link:    "https://okso.app/showcase/solid"
   content: "Schéma pour expliquer les principes SOLID"
+- title:   "La Forge"
+  link:    "https://lafor.ge/"
+  content: "Blog sur Rust, le hardwarde le réseau et pleins d'autres sujets"
