add resources (list of gem)

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -1,6 +1,9 @@
 - title:   "Newsletter hebdomadaire de Ruby"
   link:    "https://rubyweekly.com/"
   content: "Un email envoyé quotidiennement avec les meilleurs articles de la communauté Ruby"
+- title:   "Awesome Ruby"
+  link:    "https://awesome-ruby.com/"
+  content: "A Curated List of 900+ Libraries and Tools"
 - title:   "Blog de Synbioz"
   link:    "https://www.synbioz.com/blog/tech"
   content: "Plusieurs articles pour débutant et confirmé sur du Ruby et du Rails"
