Update resources page

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -1,33 +1,6 @@
-- title:   "Newsletter hebdomadaire de Ruby"
-  link:    "https://rubyweekly.com/"
-  content: "Un email envoyé quotidiennement avec les meilleurs articles de la communauté Ruby"
 - title:   "Awesome Ruby"
   link:    "https://awesome-ruby.com/"
   content: "A Curated List of 900+ Libraries and Tools"
-- title:   "Blog de Synbioz"
-  link:    "https://www.synbioz.com/blog/tech"
-  content: "Plusieurs articles pour débutant et confirmé sur du Ruby et du Rails"
-- title:   "Blog de GetAround (ex Drivy)"
-  link:    "https://getaround.tech/"
-  content: "Un blog sur des ingénieurs de GetAround avec beaucoup d'articles sur Ruby on Rails."
-- title:   "Blog Go Rails par Chris Oliver"
-  link:    "https://gorails.com/"
-  content: "Un très bon blog sur Ruby on Rails  par Chris Oliver"
-- title:   "Blog Upcase par Thoughbot"
-  link:    "https://thoughtbot.com/upcase/"
-  content: "Un des meilleurs blogs sur Ruby on Rails. Plusieurs ressources comme des vidéos, des articles et des flashcards."
-- title:   "Blog des ingénieurs d'Uber"
-  link:    "https://eng.uber.com/"
-  content: "Blog avec plusieurs articles intéressants orientée micro-services"
-- title:   "Blog dev.to"
-  link:    "https://dev.to/"
-  content: "A constructive and inclusive social network for software developers. With you every step of your journey."
-- title:   "Blog Saeloun Ruby and Rails et React"
-  link:    "https://blog.saeloun.com/"
-  content: "Blog Saeloun Ruby and Rails et React"
-- title:   "Twitter de WebSebDev"
-  link:    "https://twitter.com/websebdev"
-  content: "Un tricks par semaine sur Rails par un développeur de chez Podia"
 - title:   "Tableaux numériques"
   link:    "https://excalidraw.com/"
   content: "Interface de dessin en ligne"
@@ -40,6 +13,9 @@
 - title:   "Metabase"
   link:    "https://www.metabase.com/"
   content: "Une app pour faire des dashboard"
+- title:   "Cleanshot"
+  link:    "https://cleanshot.com/"
+  content: "Capture your Mac’s screen like a pro"
 - title:   "SOLID Principle"
   link:    "https://okso.app/showcase/solid"
   content: "Schéma pour expliquer les principes SOLID"
@@ -49,3 +25,18 @@
 - title:   "Vidéo sur Reveal.js"
   link:    "https://www.youtube.com/watch?v=Xt-BH1E13HU&t=290s&ab_channel=Grafikart.fr"
   content: "Présentation de Reveal.js par Grafikart"
+- title:   "Blog de Synbioz"
+  link:    "https://www.synbioz.com/blog/tech"
+  content: "Plusieurs articles pour débutant et confirmé sur du Ruby et du Rails"
+- title:   "Blog de GetAround (ex Drivy)"
+  link:    "https://getaround.tech/"
+  content: "Un blog sur des ingénieurs de GetAround avec beaucoup d'articles sur Ruby on Rails."
+- title:   "Blog Upcase par Thoughbot"
+  link:    "https://thoughtbot.com/upcase/"
+  content: "Un des meilleurs blogs sur Ruby on Rails. Plusieurs ressources comme des vidéos, des articles et des flashcards."
+- title:   "Blog Saeloun"
+  link:    "https://blog.saeloun.com/"
+  content: "Blog Saeloun Ruby and Rails et React"
+- title:   "Twitter de WebSebDev"
+  link:    "https://twitter.com/websebdev"
+  content: "Un tricks par semaine sur Rails par un développeur de chez Podia"
