--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -15,6 +15,16 @@
   image_path: "/images/mon-cdi.png"
 - title:      "Nysa"
   link:       "https://www.nysa.fr/"
-  content:    "Création d'un  connecteur entre la boutique Shopify et l'ERP de Nysa"
+  content:    "Création d'un connecteur entre la boutique Shopify et l'ERP de Nysa"
+  techno:     "Ruby on Rails"
+  image_path: "/images/nysa.png"
+- title:      "Vera App"
+  link:       "https://www.vera.fr/"
+  content:    "Création d'un back-end pour app mobile avec un front en Ionic/Vue.js"
+  techno:     "Ruby on Rails, Vue.js, Ionic"
+  image_path: "/images/nysa.png"
+- title:      "The Packengers"
+  link:       "https://www.thepackengers.com/"
+  content:    "Full stack developeur"
   techno:     "Ruby on Rails"
   image_path: "/images/nysa.png"
