--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,30 +1,42 @@
+- title:      "The Packengers"
+  year:       "2023"
+  link:       "https://www.thepackengers.com/"
+  content:    "Espace administrateur avec gestion des commandes, devis et facturation"
+  techno:     "Ruby on Rails, Stimulus.js, PostGreSQL"
+  image_path: "/images/tpk.png"
 - title:      "Les Ateliers NX"
+  year:       "2018 - 2021"
   link:       "https://www.lesateliersnx.fr/"
-  content:    "Création de landing pages, d'un parcours prospect, d'un espace client, d'un espace manager, et d'un espace administrateur avec gestion des projets et devis et facturation"
-  techno:     "Ruby on Rails, Vanilla JS"
+  content:    "Création de landing pages, parcours prospect, espace client, espace manager et espace administrateur avec gestion des projets, devis et facturation"
+  techno:     "Ruby on Rails, Stimulus, PostGreSQL"
   image_path: "/images/ateliers-nx.png"
 - title:      "Monsieur Peinture"
+  year:       "2019 - 2021"
   link:       "https://devis.monsieurpeinture.com/projects/new"
   content:    "Création d'un espace client avec outil d'orientation, devis, facturation, chat et d'un espace partenaire avec allocation des projets, agenda et suivi des projets"
-  techno:     "Ruby on Rails, Stimulus.js"
+  techno:     "Ruby on Rails, Stimulus.js, PostGreSQL"
   image_path: "/images/mr-peinture.png"
 - title:      "Mon CDI"
+  year:       "2020-2022"
   link:       "https://www.mon-cdi.fr"
   content:    "Maintenance du site, création de landing pages et amélioration du parcours utilisateur"
   techno:     "Ruby on Rails, Stimulus.js"
   image_path: "/images/mon-cdi.png"
-- title:      "Nysa"
-  link:       "https://www.nysa.fr/"
-  content:    "Création d'un connecteur entre la boutique Shopify et l'ERP de Nysa"
-  techno:     "Ruby on Rails"
-  image_path: "/images/nysa.png"
 - title:      "Vera App"
+  year:       "2022"
   link:       "https://www.vera.fr/"
   content:    "Création d'un back-end pour app mobile avec un front en Ionic/Vue.js"
   techno:     "Ruby on Rails, Vue.js, Ionic"
-  image_path: "/images/nysa.png"
-- title:      "The Packengers"
-  link:       "https://www.thepackengers.com/"
-  content:    "Full stack developeur"
-  techno:     "Ruby on Rails"
+  image_path: "/images/vera.png"
+- title:      "Studio Paillette"
+  year:       "2022"
+  link:       "https://www.studio-paillette.fr/"
+  content:    "Optimisation du site"
+  techno:     "Ruby on Rails, Stimulus.js, PostGreSQL"
+  image_path: "/images/paillette.png"
+- title:      "Nysa"
+  year:       "2021"
+  link:       "https://www.nysa.fr/"
+  content:    "Création d'un connecteur entre la boutique Shopify et l'ERP de Nysa"
+  techno:     "Ruby on Rails, PostGreSQL"
   image_path: "/images/nysa.png"
