add synonym dictionnary to resources.yml

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -16,6 +16,9 @@
 - title:   "Cleanshot"
   link:    "https://cleanshot.com/"
   content: "Capture your Mac’s screen like a pro"
+- title:   "Dictionnaire des synonymes"
+  link:    "https://crisco4.unicaen.fr/des/synonymes/"
+  content: "Université de Caen"
 - title:   "SOLID Principle"
   link:    "https://okso.app/showcase/solid"
   content: "Schéma pour expliquer les principes SOLID"
