--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -52,3 +52,10 @@
 - title:   "Captive Tech radar 2023"
   link:    "https://captive.notion.site/Captive-Tech-radar-2023-c83103b08c0b4e2d9e1ab09c9161811b"
   content: "Ce document a pour but de décrire les **outils et méthodologies passées, présentes et futures**, utilisées par Captive pour notre système de production."
+- title:   "Exercices pour SQL"
+  link:    "https://pgexercises.com/"
+  content: "PGExercises provides a series of questions and explanations built on a single, simple dataset"
+- title:   "A Guide to data performance for Developers"
+  link:    "https://use-the-index-luke.com/"
+  content: "Use the index, luke!"
+
