--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -49,6 +49,9 @@
 - title:   "Icons"
   link:    "https://icones.js.org/"
   content: "All icons for all providers"
+- title:   "Icons"
+  link:    "https://www.flaticon.com/"
+  content: "Access 12.6M+ vector icons & stickers "
 - title:   "Captive Tech radar 2023"
   link:    "https://captive.notion.site/Captive-Tech-radar-2023-c83103b08c0b4e2d9e1ab09c9161811b"
   content: "Ce document a pour but de décrire les **outils et méthodologies passées, présentes et futures**, utilisées par Captive pour notre système de production."
@@ -58,4 +61,6 @@
 - title:   "A Guide to data performance for Developers"
   link:    "https://use-the-index-luke.com/"
   content: "Use the index, luke!"
-
+- title:   "Refactoring and Design Patterns"
+  link:    "https://refactoring.guru/"
+  content: "Refactoring is a controllable process of improving code without creating new functionality. Design Patterns are typical solutions to the commonly occurring problems in software design."
