--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,9 +1,21 @@
 - title:      "The Packengers"
-  year:       "2023"
+  year:       "2023-2024"
   link:       "https://www.thepackengers.com/"
   content:    "Espace administrateur avec gestion des commandes, devis et facturation"
   techno:     "Ruby on Rails, Stimulus.js, PostGreSQL"
   image_path: "/images/tpk.png"
+- title:      "Vera App"
+  year:       "2022"
+  link:       "https://www.vera.fr/"
+  content:    "Création d'un back-end pour app mobile avec un front en Ionic/Vue.js"
+  techno:     "Ruby on Rails, Vue.js, Ionic"
+  image_path: "/images/vera.png"
+- title:      "Studio Paillette"
+  year:       "2022"
+  link:       "https://www.studio-paillette.fr/"
+  content:    "Optimisation du site"
+  techno:     "Ruby on Rails, Stimulus.js, PostGreSQL"
+  image_path: "/images/paillette.png"
 - title:      "Les Ateliers NX"
   year:       "2018 - 2021"
   link:       "https://www.lesateliersnx.fr/"
@@ -22,18 +34,6 @@
   content:    "Maintenance du site, création de landing pages et amélioration du parcours utilisateur"
   techno:     "Ruby on Rails, Stimulus.js"
   image_path: "/images/mon-cdi.png"
-- title:      "Vera App"
-  year:       "2022"
-  link:       "https://www.vera.fr/"
-  content:    "Création d'un back-end pour app mobile avec un front en Ionic/Vue.js"
-  techno:     "Ruby on Rails, Vue.js, Ionic"
-  image_path: "/images/vera.png"
-- title:      "Studio Paillette"
-  year:       "2022"
-  link:       "https://www.studio-paillette.fr/"
-  content:    "Optimisation du site"
-  techno:     "Ruby on Rails, Stimulus.js, PostGreSQL"
-  image_path: "/images/paillette.png"
 - title:      "Nysa"
   year:       "2021"
   link:       "https://www.nysa.fr/"
