Update resources.html template

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -1,60 +1,34 @@
-- title:   "Awesome Ruby"
-  link:    "https://awesome-ruby.com/"
-  content: "A Curated List of 900+ Libraries and Tools"
-- title:   "Tableaux numériques"
-  link:    "https://excalidraw.com/"
+- link:    "https://awesome-ruby.com/"
+  content: "Une liste de plus de 900 outils et bibliothèque pour Ruby"
+- link:    "https://excalidraw.com/"
   content: "Interface de dessin en ligne"
-- title:   "France Transfert Téléversement"
-  link:    "https://francetransfert.numerique.gouv.fr/upload"
+- link:    "https://francetransfert.numerique.gouv.fr/upload"
   content: "Transfert de fichier volumineux"
-- title:   "Page Speed"
-  link:    "https://pagespeed.web.dev"
+- link:    "https://crisco4.unicaen.fr/des/synonymes/"
+  content: "Dictionnaire des synonymes de l'Université de Caen"
+- link:    "https://pagespeed.web.dev"
   content: "Un outil pour mesurer les performances de son site"
-- title:   "Metabase"
-  link:    "https://www.metabase.com/"
-  content: "Une app pour faire des dashboard"
-- title:   "Cleanshot"
-  link:    "https://cleanshot.com/"
+- link:    "https://www.metabase.com/"
+  content: "Une application web open source pour faire des dashboard"
+- link:    "https://cleanshot.com/"
   content: "Capture your Mac’s screen like a pro"
-- title:   "Dictionnaire des synonymes"
-  link:    "https://crisco4.unicaen.fr/des/synonymes/"
-  content: "Université de Caen"
-- title:   "SOLID Principle"
-  link:    "https://okso.app/showcase/solid"
+- link:    "https://okso.app/showcase/solid"
   content: "Schéma pour expliquer les principes SOLID"
-- title:   "Vidéo sur Reveal.js"
-  link:    "https://www.youtube.com/watch?v=Xt-BH1E13HU&t=290s&ab_channel=Grafikart.fr"
-  content: "Présentation de Reveal.js par Grafikart"
-- title:   "Blog de Synbioz"
-  link:    "https://www.synbioz.com/blog/tech"
+- link:    "https://www.youtube.com/watch?v=Xt-BH1E13HU&t=290s&ab_channel=Grafikart.fr"
+  content: "Présentation vidéo de Reveal.js par Grafikart"
+- link:    "https://www.synbioz.com/blog/tech"
   content: "Plusieurs articles pour débutant et confirmé sur du Ruby et du Rails"
-- title:   "Blog de GetAround (ex Drivy)"
-  link:    "https://getaround.tech/"
-  content: "Un blog sur des ingénieurs de GetAround avec beaucoup d'articles sur Ruby on Rails."
-- title:   "Blog Upcase par Thoughbot"
-  link:    "https://thoughtbot.com/upcase/"
-  content: "Un des meilleurs blogs sur Ruby on Rails. Plusieurs ressources comme des vidéos, des articles et des flashcards."
-- title:   "Blog Saeloun"
-  link:    "https://blog.saeloun.com/"
-  content: "Blog Saeloun Ruby and Rails et React"
-- title:   "Draggable objects"
-  link:    "https://www.redblobgames.com/making-of/draggable/"
-  content: "Drag and drop for tag html"
-- title:   "Icons"
-  link:    "https://icones.js.org/"
+- link:    "https://www.redblobgames.com/making-of/draggable/"
+  content: "Draggable objects: Drag and drop for tag html"
+- link:    "https://icones.js.org/"
   content: "All icons for all providers"
-- title:   "Icons"
-  link:    "https://www.flaticon.com/"
+- link:    "https://www.flaticon.com/"
   content: "Access 12.6M+ vector icons & stickers "
-- title:   "Captive Tech radar 2023"
-  link:    "https://captive.notion.site/Captive-Tech-radar-2023-c83103b08c0b4e2d9e1ab09c9161811b"
-  content: "Ce document a pour but de décrire les **outils et méthodologies passées, présentes et futures**, utilisées par Captive pour notre système de production."
-- title:   "Exercices pour SQL"
-  link:    "https://pgexercises.com/"
+- link:    "https://captive.notion.site/Captive-Tech-radar-2023-c83103b08c0b4e2d9e1ab09c9161811b"
+  content: "Captive Tech radar 2023 Ce document a pour but de décrire les outils et méthodologies passées, présentes et futures, utilisées par Captive pour notre système de production."
+- link:    "https://pgexercises.com/"
   content: "PGExercises provides a series of questions and explanations built on a single, simple dataset"
-- title:   "A Guide to data performance for Developers"
-  link:    "https://use-the-index-luke.com/"
-  content: "Use the index, luke!"
-- title:   "Refactoring and Design Patterns"
-  link:    "https://refactoring.guru/"
-  content: "Refactoring is a controllable process of improving code without creating new functionality. Design Patterns are typical solutions to the commonly occurring problems in software design."
+- link:    "https://use-the-index-luke.com/"
+  content: "A Guide to database performance for Developers"
+- link:    "https://refactoring.guru/"
+  content: "Refactoring and Design Patterns."
